Backend: Use Collections.empty()